# NeraJob

./: .env.example  .gitignore  README.md  pyproject.toml
data/cv/: cv-devops-platform-engineer.md  cv-frontend-vue-engineer.md
docs/: BOUNTY.md  ROADMAP.md  SOURCES.md
scripts/: create-scraper-bounties.mjs
src/nerajob/: __init__.py  cli.py  config.py  match.py  models.py  storage.py
src/nerajob/apply/: __init__.py  assistant.py
src/nerajob/cv/: __init__.py  builder.py
src/nerajob/gui/: main_window.py  styles.py
src/nerajob/scrapers/: __init__.py  arbeitnow.py  base.py  registry.py  remoteok.py  remotive.py  sample.py
tests/: test_apply_assistant.py  test_arbeitnow.py  test_cv_builder.py  test_match.py  test_sample_scraper.py  test_skill_aliases.py
