[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerajob"
version = "0.1.0"
description = "Global job scanner, CV builder, and apply assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MergeOS / ThanhTrucSolutions" }]
keywords = ["jobs", "cv", "resume", "scraper", "career"]
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
nerajob = "nerajob.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
